frontend/src/styles/TeamMaker.css
.teammaker-page {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 2 * var(--spacing-xl));
}

.teammaker-page > .teammaker-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.teammaker-container {
  display: grid;
  grid-template-columns: 900px 1fr;
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: var(--spacing-lg);
  grid-row-gap: var(--spacing-lg);
  overflow: hidden;
}

/* Team container */
.teamContainer {
  grid-area: 1 / 1 / 2 / 2;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: var(--spacing-sm);
}

.team-section {
  gap: var(--spacing-md);
  display: flex;
  margin-bottom: var(--spacing-md);
}

.table-section {
  flex-grow: 1;
  min-height: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  grid-area: 1 / 2 / 3 / 3;
}

.table-section > .loading-indicator {
  flex-grow: 1;
}

.pokemonTeamCard {
  background-color: var(--white);
  border-radius: var(--radius-md);
  padding: var(--spacing-sm);
  display: grid;
  grid-template-columns: 110px 1fr;
  grid-template-rows: 110px 1fr;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.pokemonTeamCard button {
  border: none;
  height: 100%;
}

.selected-slot {
  width: 100%;
  outline: 2px solid var(--picton-blue);
  outline-offset: -2px;
}

.pokemon-image-wrapper {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.pokemonImageContainer {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pokemonImageContainer img {
  position: relative;
  z-index: 2;
  width: 90%;
  height: 90%;
  object-fit: contain;
}

/* Pokemon Data Container */
.pokemonDataContainer {
  flex: 1;
  display: flex;
  grid-area: 1 / 2 / 2 / 3;
  flex-direction: column;
  margin-left: var(--spacing-xs);
}

/* Main Info Container */
.mainInfoContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--spacing-xs);
}

/* Name and Level Container */
.name-levelContainer {
  display: flex;
  gap: var(--spacing-sm);
  align-items: center;
}

.name-levelContainer > p {
  font-size: var(--font-size-md);
  font-weight: 500;
  text-transform: capitalize;
}

.pokemonCurrentLevel {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--silver);
  padding-inline: var(--spacing-sm);
  border-radius: var(--radius-full);
  gap: var(--spacing-xs);
}

.pokemonCurrentLevel strong {
  font-weight: 500;
}

/* Pokemon Typing */
.pokemonTypeing {
  display: flex;
  gap: var(--spacing-xs);
}

.small-icon {
  border-radius: var(--radius-sm);
  height: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
}

/* Item and Ability Container */
.item-abilityContainer {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: var(--spacing-xs);
}

.item-abilityContainer button {
  justify-content: left;
}

.itemContainer {
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
  height: 20px;
}

.item-sprite {
  font-size: var(--font-size-xl);
  color: var(--silver);
  height: var(--item-slot-size);
  width: var(--item-slot-size);
  position: absolute;
}

.item-button {
  margin-left: calc(var(--item-slot-size) + var(--spacing-xs));
}

.item-button,
.ability-button {
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  border-radius: var(--radius-full);
  padding: 0 var(--spacing-sm);
  background-color: var(--white-smoke);
  transition: all var(--transition-fast);
}

.item-button:hover,
.ability-button:hover {
  background-color: var(--picton-blue-light);
}

/* Separator Line */
#separatorLine {
  border-radius: var(--radius-full);
  min-height: 1px;
  border: none;
  margin-block: var(--spacing-xs);
  background-color: var(--silver);
}

/* Move Set Container */
.moveInputsContainer {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: var(--spacing-xs);
  height: 100%;
}

.moveInput p {
  z-index: 9999;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.moveInput {
  position: relative;
  width: 100%;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: var(--radius-sm);
  transition: none;
}

.moveInput:hover .move-type-icon-small {
  transform: scale(0.75);
  transition: all var(--transition-fast) !important;
}

.moveInput[style*="--type-normal"]:hover {
  background-color: var(--type-normal-dark) !important;
}
.moveInput[style*="--type-water"]:hover {
  background-color: var(--type-water-dark) !important;
}
.moveInput[style*="--type-fire"]:hover {
  background-color: var(--type-fire-dark) !important;
}
.moveInput[style*="--type-grass"]:hover {
  background-color: var(--type-grass-dark) !important;
}
.moveInput[style*="--type-electric"]:hover {
  background-color: var(--type-electric-dark) !important;
}
.moveInput[style*="--type-ice"]:hover {
  background-color: var(--type-ice-dark) !important;
}
.moveInput[style*="--type-fighting"]:hover {
  background-color: var(--type-fighting-dark) !important;
}
.moveInput[style*="--type-poison"]:hover {
  background-color: var(--type-poison-dark) !important;
}
.moveInput[style*="--type-ground"]:hover {
  background-color: var(--type-ground-dark) !important;
}
.moveInput[style*="--type-flying"]:hover {
  background-color: var(--type-flying-dark) !important;
}
.moveInput[style*="--type-psychic"]:hover {
  background-color: var(--type-psychic-dark) !important;
}
.moveInput[style*="--type-bug"]:hover {
  background-color: var(--type-bug-dark) !important;
}
.moveInput[style*="--type-rock"]:hover {
  background-color: var(--type-rock-dark) !important;
}
.moveInput[style*="--type-ghost"]:hover {
  background-color: var(--type-ghost-dark) !important;
}
.moveInput[style*="--type-dragon"]:hover {
  background-color: var(--type-dragon-dark) !important;
}
.moveInput[style*="--type-dark"]:hover {
  background-color: var(--type-dark-dark) !important;
}
.moveInput[style*="--type-steel"]:hover {
  background-color: var(--type-steel-dark) !important;
}
.moveInput[style*="--type-fairy"]:hover {
  background-color: var(--type-fairy-dark) !important;
}

.pokemonStatsContainer:hover .statValue {
  background-color: var(--picton-blue-light);
}

.selected-move,
.selected-item,
.selected-ability,
.stats-selected .statValue {
  background-color: var(--picton-blue-normal);
}

.selected-move:hover,
.selected-item:hover,
.selected-ability:hover,
.stats-selected:hover .statValue {
  background-color: var(--picton-blue-light);
}

/* Stats Container */
.pokemonStatsContainer {
  display: flex;
  justify-content: space-between;
  gap: var(--spacing-sm);
}

.pokemonStatsContainerWrapper {
  grid-area: 2 / 1 / 3 / 3;
  width: 100%;
  display: flex;
  flex-direction: column;
}

/* Individual Stat Container */
.statContainer {
  display: flex;
  width: 100%;
  height: 100%;
  overflow: hidden;
  border-radius: var(--radius-full);
  background-color: var(--white-smoke);
  transition: transform var(--transition-fast);
}

/* Stat Label */
.statLabel {
  line-height: 1;
  width: 60%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: var(--font-size-xs);
  font-weight: 500;
  text-transform: uppercase;
}

/* Stat Value */
.statValue {
  width: 40%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: var(--font-size-xs);
}

.tooltip-text {
  text-decoration: underline;
}

.tippy-content {
  text-align: center;
  min-height: 20px;
}

.type-tooltip-content {
  padding: 0;
}

.tippy-box {
  border-radius: var(--radius-full);
}

.tippy-box[data-theme~="not-rounded"] {
  border-radius: var(--radius-md);
  line-height: var(--font-size-sm);
  padding-block: var(--spacing-xs);
  text-wrap: balance;
  max-width: 300px;
}

.tippy-box[data-theme~="transparent"] {
  background-color: transparent;
  border-radius: var(--radius-full);
}

.tippy-box[data-theme~="transparent"] .tippy-content {
  padding: 0;
}

/* Type-specific arrow colors */
.tippy-box[data-theme~="type-tooltip-normal"] > .tippy-arrow::before {
  border-top-color: var(--type-normal);
}

.tippy-box[data-theme~="type-tooltip-fire"] > .tippy-arrow::before {
  border-top-color: var(--type-fire);
}

.tippy-box[data-theme~="type-tooltip-water"] > .tippy-arrow::before {
  border-top-color: var(--type-water);
}

.tippy-box[data-theme~="type-tooltip-grass"] > .tippy-arrow::before {
  border-top-color: var(--type-grass);
}

.tippy-box[data-theme~="type-tooltip-electric"] > .tippy-arrow::before {
  border-top-color: var(--type-electric);
}

.tippy-box[data-theme~="type-tooltip-ice"] > .tippy-arrow::before {
  border-top-color: var(--type-ice);
}

.tippy-box[data-theme~="type-tooltip-fighting"] > .tippy-arrow::before {
  border-top-color: var(--type-fighting);
}

.tippy-box[data-theme~="type-tooltip-poison"] > .tippy-arrow::before {
  border-top-color: var(--type-poison);
}

.tippy-box[data-theme~="type-tooltip-ground"] > .tippy-arrow::before {
  border-top-color: var(--type-ground);
}

.tippy-box[data-theme~="type-tooltip-flying"] > .tippy-arrow::before {
  border-top-color: var(--type-flying);
}

.tippy-box[data-theme~="type-tooltip-psychic"] > .tippy-arrow::before {
  border-top-color: var(--type-psychic);
}

.tippy-box[data-theme~="type-tooltip-bug"] > .tippy-arrow::before {
  border-top-color: var(--type-bug);
}

.tippy-box[data-theme~="type-tooltip-rock"] > .tippy-arrow::before {
  border-top-color: var(--type-rock);
}

.tippy-box[data-theme~="type-tooltip-ghost"] > .tippy-arrow::before {
  border-top-color: var(--type-ghost);
}

.tippy-box[data-theme~="type-tooltip-dragon"] > .tippy-arrow::before {
  border-top-color: var(--type-dragon);
}

.tippy-box[data-theme~="type-tooltip-dark"] > .tippy-arrow::before {
  border-top-color: var(--type-dark);
}

.tippy-box[data-theme~="type-tooltip-steel"] > .tippy-arrow::before {
  border-top-color: var(--type-steel);
}

.tippy-box[data-theme~="type-tooltip-fairy"] > .tippy-arrow::before {
  border-top-color: var(--type-fairy);
}

/* Reduce el padding vertical */
.tippy-box .tippy-content {
  padding-block: 1px;
}

.move-type-icon-small {
  position: absolute;
  height: 20px;
  left: var(--spacing-xs);
}

